--- a/access.html
+++ b/access.html
@@ -8,7 +8,7 @@
 <body>
 <header id="top">
   <!-- logo -->
-  <h1><a href="#"><img src="" alt=""></a></h1>
+  <h1><a href="#"><img src="logo.png" alt="logo" width="200" height="200"></a></h1>
 </header>
 <nav>
   <ul>
