--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <body>
 <header id="top">
   <!-- logo -->
-  <h1><a href="index.html"><img src="images/" alt=""></a></h1>
+  <h1><a href="index.html"><img src="logo.png" alt="logo" width="200" height="200"></a></h1>
+  <p>Tel:03-1234-5678</p>
+  <ul>
+    <li>
+      <a href="access.html">Access</a>
+    </li>
+    <li>
+      <a href="contact.html">Contact</a>
+    </li>
+  </ul>
 </header>
 <nav>
   <ul>
