--- a/about.html
+++ b/about.html
@@ -9,6 +9,15 @@
 <header id="top">
   <!-- logo -->
   <h1><a href="#"><img src="logo.png" alt="logo" width="200" height="200"></a></h1>
+  <p>Tel:03-1234-5678</p>
+  <ul>
+    <li>
+      <a href="access.html">Access</a>
+    </li>
+    <li>
+      <a href="contact.html">Contact</a>
+    </li>
+  </ul>
 </header>
 <nav>
   <ul>
