--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
 <div class="breadcrumb"><!-- パンくずリスト -->
   <ul>
     <li><a href="index.html">Top</a></li>
-    <li>Miki's Ballet School|About</li>
+    <li>About</li>
   </ul>
 </div>
 <div class="wrap">
-  <div class="mail">
+  <div class="main">
     <article>
       <h2>Miki's Ballet School</h2>
     </article>
