--- a/access.html
+++ b/access.html
@@ -31,7 +31,7 @@
 <div class="breadcrumb"><!-- パンくずリスト -->
   <ul>
     <li><a href="index.html">Top</a></li>
-    <li>Miki's Ballet School|Access</li>
+    <li>Access</li>
   </ul>
 </div>
 <div class="wrap">
