--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 <header id="top">
   <!-- logo -->
   <h1><a href="index.html"><img src="logo.png" alt="logo" width="200" height="200"></a></h1>
-  <p>Tel:03-1234-5678</p>
-  <ul>
-    <li>
-      <a href="access.html">Access</a>
-    </li>
-    <li>
-      <a href="contact.html">Contact</a>
-    </li>
-  </ul>
+  <div class="top_contact">
+    <p>Tel:03-1234-5678</p>
+    <ul>
+      <li>
+        <a href="access.html">Access</a>
+      </li>
+      <li>
+        <a href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </div>
 </header>
 <nav>
   <ul>
@@ -33,12 +35,12 @@
 </nav>
 <div class="breadcrumb"><!-- パンくずリスト -->
   <ul>
-    <li><a href="index.html"><i class="fas fa-stroopwafel"></i>Top</a></li>
+    <li><a href="index.html">Top</a></li>
     <li>Miki's Ballet School</li>
   </ul>
 </div>
 <div class="wrap">
-  <div class="mail">
+  <div class="main">
     <article>
       <h2>Miki's Ballet School</h2>
     </article>
