--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <div class="main">
     <article>
       <h2>Miki's Ballet School</h2>
+      <p>abcdefgabcdegf</p>
     </article>
   </div>
 </div>
