--- a/access.html
+++ b/access.html
@@ -8,16 +8,13 @@
 <body>
 <header id="top">
   <!-- logo -->
-  <h1><a href="#"><img src="logo.png" alt="logo" width="200" height="200"></a></h1>
-  <p>Tel:03-1234-5678</p>
-  <ul>
-    <li>
-      <a href="access.html">Access</a>
-    </li>
-    <li>
-      <a href="contact.html">Contact</a>
-    </li>
-  </ul>
+  <h1><a href="#"><img src="logo.png" alt="logo" width="190"></a></h1>
+<div class="top_contact">
+    <ul>
+      <li id="bannertel"><a href="access.html">Access</a></li>
+      <li id="bannertel2"><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
 </header>
 <nav>
   <ul>
