--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header id="top">
   <!-- logo -->
-  <h1><a href="index.html"><img src="logo.png" alt="logo"></a></h1>
+  <h1><a href="index.html"><img src="logo.png" alt="logo" width="190px"></a></h1>
   <div class="top_contact">
     <ul>
       <li id="bannertel"><a href="access.html">Access</a></li>
@@ -37,7 +37,8 @@
 <div class="wrap">
   <div class="main">
     <article>
-      <h2>Miki's Ballet School</h2>
+      <p><img src="" alt=""></p>
+      <h1>Miki's Ballet School</h1>
     </article>
   </div>
 </div>
