--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 <footer>
   <small>Copyright2018Miki's Ballet School</small>
 </footer>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+  $(document).ready(function(){
+
+  });
+</script>
+
 </body>
 </html>
+
+<!-- $(document).ready(function(){}); -->
+
+
 
